--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,4 @@ Thumbs.db
 .idea/dataSources.ids
 
 # google maps API key - each developer needs a unique key for their own machine
-/app/src/debug/res/values/google_maps_api.xml
+#/app/src/debug/res/values/google_maps_api.xml
